# StreamVoiceAnon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
anon/: 02_run.sh  README.md  run_anonymization.py
configs/: config_asr_bsq_8192.yaml  config_firefly_arvcasr_8192_delay0_8.yaml  presets.json
configs/hydra_arcs/: causal-encoder-lfq-8192.yaml  firefly_arvc_bsq_8192_delay0_8.yaml
configs/hydra_arcs/asr/: asr_decoder_only.yaml
configs/hydra_arcs/sv/: campplus.yaml  sparktts_speaker_encoder.yaml
configs/hydra_arcs/vocoders/: firefly_gan_vq.yaml
configs/hydra_arcs/wav2vec/: w2v_bert2.yaml
configs/inuse/: config.json
dataloaders/: hf_stream_dataloader.py
evaluations/: infer_arvc.py  infer_seedtts_testset.py  real-time-gui.py
modules/: arvc_wrapper.py  dual_ar_stream.py
modules/asr/: asr_decoder.py
modules/bicodec_speaker_encoder/: speaker_encoder.py
modules/campplus/: classifier.py
modules/vqgan/: spectrogram.py  windowed_transformer.py
modules/vqgan/modules/: bsq.py  bsq_no_upsample.py  causal_cnn.py  firefly.py  firefly_encoder.py  fsq.py
modules/wav2vec/: w2v_bert2.py
optimizers/: default.py  modified_muon.py
text_utils/: clean.py
text_utils/chn_text_norm/: basic_class.py  basic_util.py  cardinal.py  date.py  digit.py  fraction.py  money.py  percentage.py  telephone.py  text.py
trainers/: arvc_trainer.py  asr_trainer.py
