[project]
name = "stream-vc"
version = "0.0.0"
description = ""
license = {text = "MIT"}
authors = [
    {name = "Songting Liu", email = "LIUS0114@e.ntu.edu.sg"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "librosa<1.0.0,>=0.9.1",
    "numba<1.0.0,>=0.56.4",
    "wandb>=0.15.4",
    "tensorboard<3.0.0,>=2.11.2",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "lightning>=2.0.3",
    "hydra-core>=1.3.2",
    "pyrootutils>=1.0.4",
    "matplotlib>=3.7.1",
    "vocos>=0.0.2",
    "transformers>=4.31.0",
    "torchvision>=0.16.0",
    "vector-quantize-pytorch==1.14.24",
    "datasets>=3.5.0"
]

